// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`facepaint basic 1`] = `"css-xee1ha"`;

exports[`facepaint basic 2`] = `
.glamor-0 {
  color: red;
}

@media (min-width:420px) {
  .glamor-0 {
    color: green;
  }
}

@media (min-width:920px) {
  .glamor-0 {
    color: blue;
  }
}

@media (min-width:1120px) {
  .glamor-0 {
    color: darkorchid;
  }
}

<div
  className="glamor-0"
>
  Basic
</div>
`;

exports[`facepaint basic 3`] = `
".css-xee1ha {
  color: red;
}

@media (min-width:420px) {
  .css-xee1ha {
    color: green;
  }
}

@media (min-width:920px) {
  .css-xee1ha {
    color: blue;
  }
}

@media (min-width:1120px) {
  .css-xee1ha {
    color: darkorchid;
  }
}"
`;

exports[`facepaint holes 1`] = `"css-196uzh"`;

exports[`facepaint holes 2`] = `
.glamor-0 {
  color: red;
}

@media (min-width:920px) {
  .glamor-0 {
    color: blue;
  }
}

@media (min-width:1120px) {
  .glamor-0 {
    color: darkorchid;
  }
}

<div
  className="glamor-0"
>
  Basic
</div>
`;

exports[`facepaint holes 3`] = `
".css-196uzh {
  color: red;
}

@media (min-width:920px) {
  .css-196uzh {
    color: blue;
  }
}

@media (min-width:1120px) {
  .css-196uzh {
    color: darkorchid;
  }
}"
`;

exports[`facepaint multiple 1`] = `"css-egce6e"`;

exports[`facepaint multiple 2`] = `
.glamor-0 {
  color: red;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:420px) {
  .glamor-0 {
    color: green;
    display: block;
  }
}

@media (min-width:920px) {
  .glamor-0 {
    color: blue;
    display: inline-block;
  }
}

@media (min-width:1120px) {
  .glamor-0 {
    color: darkorchid;
    display: table;
  }
}

<div
  className="glamor-0"
>
  multiple
</div>
`;

exports[`facepaint multiple 3`] = `
".css-egce6e {
  color: red;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:420px) {
  .css-egce6e {
    color: green;
    display: block;
  }
}

@media (min-width:920px) {
  .css-egce6e {
    color: blue;
    display: inline-block;
  }
}

@media (min-width:1120px) {
  .css-egce6e {
    color: darkorchid;
    display: table;
  }
}"
`;

exports[`facepaint nested 1`] = `"css-1ohjc6h"`;

exports[`facepaint nested 2`] = `
.glamor-0 {
  width: 25%;
}

.glamor-0 .foo {
  color: red;
}

.glamor-0 .foo img {
  height: 10px;
}

@media (min-width:420px) {
  .glamor-0 {
    width: 50%;
  }
}

@media (min-width:920px) {
  .glamor-0 {
    width: 75%;
  }
}

@media (min-width:1120px) {
  .glamor-0 {
    width: 100%;
  }
}

@media (min-width:420px) {
  .glamor-0 .foo {
    color: green;
  }
}

@media (min-width:920px) {
  .glamor-0 .foo {
    color: blue;
  }
}

@media (min-width:1120px) {
  .glamor-0 .foo {
    color: darkorchid;
  }
}

@media (min-width:420px) {
  .glamor-0 .foo img {
    height: 15px;
  }
}

@media (min-width:920px) {
  .glamor-0 .foo img {
    height: 20px;
  }
}

@media (min-width:1120px) {
  .glamor-0 .foo img {
    height: 25px;
  }
}

<div
  className="glamor-0"
>
  <div
    className="foo"
  >
    foo
  </div>
  function
</div>
`;

exports[`facepaint nested 3`] = `
".css-1ohjc6h {
  width: 25%;
}

@media (min-width:420px) {
  .css-1ohjc6h {
    width: 50%;
  }
}

@media (min-width:920px) {
  .css-1ohjc6h {
    width: 75%;
  }
}

@media (min-width:1120px) {
  .css-1ohjc6h {
    width: 100%;
  }
}

.css-1ohjc6h .foo {
  color: red;
}

@media (min-width:420px) {
  .css-1ohjc6h .foo {
    color: green;
  }
}

@media (min-width:920px) {
  .css-1ohjc6h .foo {
    color: blue;
  }
}

@media (min-width:1120px) {
  .css-1ohjc6h .foo {
    color: darkorchid;
  }
}

.css-1ohjc6h .foo img {
  height: 10px;
}

@media (min-width:420px) {
  .css-1ohjc6h .foo img {
    height: 15px;
  }
}

@media (min-width:920px) {
  .css-1ohjc6h .foo img {
    height: 20px;
  }
}

@media (min-width:1120px) {
  .css-1ohjc6h .foo img {
    height: 25px;
  }
}"
`;
